clang/test/BSC/Negative/Method/Struct/struct_this_param_check/struct_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
};
int struct Foo::getA(struct Foo this) { // expected-error {{struct Foo is not supported on this target}}
    return 1;
}
